yaml/traefik-ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: kube-system
spec:
  rules:
  - host: traefik.ctag.io
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-ingress-service
          servicePort: 8080
  - host: grafana.ctag.io
    http:
      paths:
      - path: /
        backend:
          serviceName: monitoring-grafana
          servicePort: 80
  - host: dashboard.ctag.io
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
  - host: kibana.ctag.io
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana-logging
          servicePort: 5601          
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: istio-system
spec:
  rules:
  - host: jaeger.ctag.io
    http:
      paths:
      - path: /
        backend:
          serviceName: jaeger-query
          servicePort: 80
